# memotic

./: .env.example  .gitignore  .tmuxp.yaml  README.md  buf.gen.yaml  pyproject.toml
src/: dockerfile.txt
src/examples/: example.py  example_server.py  simple_log_example.py  usage.py  usage_examples.py
src/examples/cli-sandbox/: Dockerfile  docker-compose.yaml
src/memotic/: __init__.py  api.py  app.py  base.py  cli.py  cli_main.py  client.py  config.py  container_manager.py  decorators.py  dependencies.py  event_runner.py  events.py  example.py  handlers.py  memos_client.py  models.py  old_handlers.py  old_memos_client.py  plugin.py  server.py  storage.py
src/memotic/cli/: __init__.py  exec.py  handler.py  models.py
src/memotic/handlers/: base.py  cli.py
src/memotic/integrations/: __init__.py  memos.py
src/memotic/models/: __init__.py  base.py  nodes.py  user.py
src/memotic/old-models/: memo.py  user.py
src/memotic/old_models/: __init__.py  base.py  memo.py
src/memotic/proto_gen/google/api/: __init__.py
src/memotic/proto_gen/google/protobuf/: __init__.py
src/memotic/proto_gen/memos/api/v1/: __init__.py
src/memotic/proto_gen/memos/store/: __init__.py
src/memotic/routers/: __init__.py  activities.py  attachments.py  auth.py  memos.py  users.py
src/memotic/scripts/: generate.py
src/memotic/webhook/: events.py  plugin.py  test_plugin_console.py
src/scripts/: bulk_copy_rename.py
src/tests/: conftest.py  test_activities.py  test_attachments.py  test_auth.py  test_cli_flow.py  test_cli_integration.py  test_client.py  test_config_validation.py  test_container_management.py  test_memos.py  test_memos_api.py  test_users.py
