[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "memotic"
version = "0.3.0"
description = "Memos webhook event processing plugin for WebHooky"
requires-python = ">=3.11"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
dependencies = [
    "webhooky",
    "pydantic>=2.7",
    "typing-extensions>=4.10",
]

keywords = ["webhooks", "memos", "notes", "markdown", "webhooky", "plugin"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Development Status :: 4 - Beta",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.6",
]

[tool.uv.sources]
webhooky = { git = "https://github.com/Bullish-Design/webhooky.git" }

[project.urls]
Homepage = "https://github.com/your-org/webhooky-memos"
Repository = "https://github.com/your-org/webhooky-memos"
Issues = "https://github.com/your-org/webhooky-memos/issues"

# Register as WebHooky plugin
[project.entry-points."webhooky.plugins"]
memos = "webhooky_memos.plugin:get_plugin_info"

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
lint.ignore = ["E501", "W293", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"