[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "memotic"
version = "0.4.1"
description = "Memos webhook event processing plugin for WebHooky"
requires-python = ">=3.11"
authors = [{name = "Bullish-Design"}]
license = {text = "MIT"}
dependencies = [
    "webhooky",
    "pydantic>=2.7",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]

keywords = ["webhooks", "memos", "notes", "markdown", "webhooky", "plugin"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Development Status :: 4 - Beta",
]

[project.optional-dependencies]
cli = ["solitary>=0.2"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.6",
]

[tool.uv.sources]
webhooky = { git = "https://github.com/Bullish-Design/webhooky.git" }

[project.urls]
Homepage = "https://github.com/your-org/memotic"
Repository = "https://github.com/your-org/memotic"
Issues = "https://github.com/your-org/memotic/issues"

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
lint.ignore = ["E501", "W293", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
